[tool.poetry]
name = "typing-assistant"
version = "0.1.0"
description = ""
authors = ["Michał Czyż <mike@c2yz.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pynput = "^1.7.7"
pyperclip = "^1.9.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
